update kotlin, add keep-alive route
